# docs/swagger.yaml
@@ -276,7 +276,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get favorite words of current user
+      description: Get words are pulic word
       parameters:
       - default: Bearer <Add access token here>
         description: Insert your access token
@@ -297,7 +297,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/httputil.HTTPError'
-      summary: Get favorite words
+      summary: Get words
       tags:
       - words
     post:
@@ -410,6 +410,34 @@ paths:
           schema:
             $ref: '#/definitions/httputil.HTTPError'
       summary: Update word
+      tags:
+      - words
+  /v1/words/favorites:
+    get:
+      consumes:
+      - application/json
+      description: Get favorite words of current user
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Word'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      summary: Get favorite words
       tags:
       - words
 swagger: "2.0"
